tests/test_data/nodeport/expected/networking.k8s.io/v1/Ingress/chartmuseum.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    jenkins.io/host: 1.2.3.4:30123
    kubernetes.io/ingress.class: nginx
  name: chartmuseum
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins-x-chartmuseum
            port:
              number: 8080
        path: "/chartmuseum"
