tests/test_data/nodeport/expected/networking.k8s.io/v1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    jenkins.io/host: 1.2.3.4:30123
    kubernetes.io/ingress.class: nginx
  name: hook
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hook
            port: 80
        path: "/hook"
    host: hook-jx.1.2.3.4:30123
